--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           >
           <nav>
             <ul class="nav-list">
-              <li class="nav-item"><a class="nav-text" href="">Studio</a></li>
+              <li class="nav-item">
+                <a class="nav-text studio" href="">Studio</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-text" href="./portfolio.html">Portfolio</a>
                 </li>
@@ -51,7 +53,9 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
-                <button class="hero-button" type="button">Order Service</button>
+                <button class="hero-button" type="button" data-modal-open>
+            Order Service
+          </button>
             </div>
         </section>
 
@@ -377,6 +381,21 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="close" data-modal-close>
+          <svg width="8" height="8">
+            <use
+              class="close-icon"
+              href="./images/icons.svg#icon-close-black"
+            ></use>
+          </svg>
+        </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
