--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <ul class="nav-list">
               <li class="nav-item"><a class="nav-text" href="./index.html">Studio</a></li>
                 <li class="nav-item">
-                    <a class="nav-text" href="">Portfolio</a>
+                    <a class="nav-text portfolio" href="">Portfolio</a>
                 </li>
                 <li class="nav-item"><a class="nav-text" href="">Contacts</a></li>
                 </ul>
@@ -59,63 +59,99 @@
                 </ul>
                 <ul class="projects-list">
                     <li class="projects-item">
-                        <img src="./images/img1-1.jpg" alt="bank app screenshots" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img1-1.jpg" alt="bank app screenshots" width="358" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Banking App Interface Concept</h3>
                             <p class="projects-text">App</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img1-2.jpg" alt="smartphone scans qr code" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img1-2.jpg" alt="smartphone scans qr code" width="358" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Cashless Payment</h3>
                             <p class="projects-text">Marketing</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img1-3.jpg" alt="laptop and smartphone with app on screens" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img1-3.jpg" alt="laptop and smartphone with app on screens" width="358" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Meditaion App</h3>
                             <p class="projects-text">App</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img2-1.jpg" alt="view of the driver's seat through the window" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img2-1.jpg" alt="view of the driver's seat through the window" width="359" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Taxi Service</h3>
                             <p class="projects-text">Marketing</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img2-2.jpg" alt="phone and four screensavers to choose from" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img2-2.jpg" alt="phone and four screensavers to choose from" width="359" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Screen Illustrations</h3>
                             <p class="projects-text">Design</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img2-3.jpg" alt="girl with phone in hand" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img2-3.jpg" alt="girl with phone in hand" width="359" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Online Courses</h3>
                             <p class="projects-text">Marketing</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img3-1.jpg" alt="screenshots from instagram" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img3-1.jpg" alt="screenshots from instagram" width="360" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Instagram Stories Concept</h3>
                             <p class="projects-text">Design</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img3-2.jpg" alt="woman with a bag of vegetables" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img3-2.jpg" alt="woman with a bag of vegetables" width="360" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Organic Food</h3>
                             <p class="projects-text">Web Site</p>
                         </div>
                     </li>
                     <li class="projects-item">
-                        <img src="./images/img3-3.jpg" alt="a cup of coffee" width="358" />
+                        <div class="projects-img">
+                            <img src="./images/img3-3.jpg" alt="a cup of coffee" width="360" />
+                        </div>
+                        <p class="hidden-text">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="projects-card">
                             <h3 class="projects-direction">Fresh Coffee</h3>
                             <p class="projects-text">Web Site</p>
