One working project item

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,14 +58,27 @@
                     <li class="filters-item"><button class="filters-text" type="button">Marketing</button></li>
                 </ul>
                 <ul class="projects-list">
+                    <!-- project-item -->
                     <li class="projects-item">
-                        <div class="projects-img">
-                            <img src="./images/img1-1.jpg" alt="bank app screenshots" width="358" />
+
+                        <!-- project-card -->
+                        <div class="box">
+                            <!-- project-image -->
+                            <div class="projects-img">
+                                <img src="./images/img1-1.jpg" alt="bank app screenshots" width="358" />
+                            </div>
+                            <div class="overlay">
+                                <!-- project-description -->
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <!-- project-info -->
                         <div class="projects-card">
+                            <!-- project-title -->
                             <h3 class="projects-direction">Banking App Interface Concept</h3>
+                            <!-- project-type -->
                             <p class="projects-text">App</p>
                         </div>
                     </li>
