--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@
                     <li class="filters-item"><button class="filters-text" type="button">Marketing</button></li>
                 </ul>
                 <ul class="projects-list">
+                    <!-------- Example -------->
                     <li class="project-item">
-
                         <div class="project-card">
                             <div class="project-image">
                                 <img src="./images/img1-1.jpg" alt="bank app screenshots" width="358" />
@@ -75,89 +75,137 @@
                             <p class="project-type">App</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img1-2.jpg" alt="smartphone scans qr code" width="358" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img1-2.jpg" alt="smartphone scans qr code" width="358" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Cashless Payment</h3>
                             <p class="project-type">Marketing</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img1-3.jpg" alt="laptop and smartphone with app on screens" width="358" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img1-3.jpg" alt="laptop and smartphone with app on screens" width="358" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Meditaion App</h3>
                             <p class="project-type">App</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img2-1.jpg" alt="view of the driver's seat through the window" width="359" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img2-1.jpg" alt="view of the driver's seat through the window" width="359" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+
                         <div class="project-info">
                             <h3 class="project-title">Taxi Service</h3>
                             <p class="project-type">Marketing</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img2-2.jpg" alt="phone and four screensavers to choose from" width="359" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img2-2.jpg" alt="phone and four screensavers to choose from" width="359" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Screen Illustrations</h3>
                             <p class="project-type">Design</p>
                         </div>
                     </li>
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img2-3.jpg" alt="girl with phone in hand" width="359" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img2-3.jpg" alt="girl with phone in hand" width="359" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Online Courses</h3>
                             <p class="project-type">Marketing</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img3-1.jpg" alt="screenshots from instagram" width="360" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img3-1.jpg" alt="screenshots from instagram" width="360" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Instagram Stories Concept</h3>
                             <p class="project-type">Design</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img3-2.jpg" alt="woman with a bag of vegetables" width="360" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img3-2.jpg" alt="woman with a bag of vegetables" width="360" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Organic Food</h3>
                             <p class="project-type">Web Site</p>
                         </div>
                     </li>
+
                     <li class="project-item">
-                        <div class="project-image">
-                            <img src="./images/img3-3.jpg" alt="a cup of coffee" width="360" />
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="./images/img3-3.jpg" alt="a cup of coffee" width="360" />
+                            </div>
+                            <div class="overlay">
+                                <p class="project-description">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                         </div>
-                        <p class="hidden-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         <div class="project-info">
                             <h3 class="project-title">Fresh Coffee</h3>
                             <p class="project-type">Web Site</p>
