--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
           <svg width="8" height="8">
             <use
               class="close-icon"
-              href="./images/icons.svg#icon-close-black"
+              href="./images/icons.svg#icon-close"
             ></use>
           </svg>
         </button>
